# avogadro-mace

./: README.md  pyproject.toml
src/avogadro_mace/: __init__.py  _mace_server.py  macemp0.py  maceoff23.py
